--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -68,9 +68,19 @@ $feature-row-margin-bottom: 24px;
 
 $feature-heading-margin-bottom: 69px;
 
+$footer-padding-bottom: 50px;
+$footer-padding-top: 50px;
+
 $lead-1-font-size: $font-size-base * 1.125;
 $lead-1-font-weight: 400;
 $lead-1-line-height: 1.5;
+
+$font-label-small-familiy: $font-family-sans-serif;
+$font-label-small-weight: 300;
+$font-label-small-size: $font-size-base * 0.875;
+$font-label-small-line-height: 1.5;
+
+$link-row-margin-top: 19px;
 
 .lead-1 {
   font-size: $lead-1-font-size;
