--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -1,3 +1,5 @@
+@use '../custom' as *;
+
 @mixin dropShadow {
     box-shadow: 0px 4px 4px rgba(103, 103, 103, 0.25); 
 }
@@ -8,4 +10,11 @@
 
 @mixin borderRadiusSTD {
     border-radius: 3px;
+}
+
+@mixin fontLabelSmall {
+    font-family: $font-label-small-familiy;
+    font-weight: $font-label-small-weight;
+    font-size: $font-label-small-size;
+    line-height: $font-label-small-line-height;
 }
