Fixed submit button, added shadow, hover color white

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -30,7 +30,13 @@ $btn-price-selection-padding-right: 5px;
     background-color: $blue;
     padding: $button-padding-vertical $button-padding-horizontal;
     @include buttonFont;
+    @include dropShadow;
     color: $white; 
+
+    &:hover {
+
+        color: $white;
+    }
 }
 
 .btn-price-selection {
