--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11158,6 +11158,10 @@ textarea.form-control-lg {
   font-size: 1.25rem;
   font-weight: 500;
   line-height: 1.5;
+  box-shadow: 0px 4px 4px rgba(103, 103, 103, 0.25);
+  color: #fff;
+}
+.btn-submit:hover {
   color: #fff;
 }
 
