--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -77,10 +77,12 @@ $brand-color: $gray-900;
 $navbar-height: 72px;
 $navbar-menu-width: 70%;
 $navbar-menu-max-width: 450px;
-$navbar-margin-bottom: 100px;
 
+$hero-margin-top-xsm: 25px;
+$hero-margin-top-md: 100px;
 $hero-margin-bottom: 20px;
 $hero-cta-margin-top: 31px;
+$hero-cta-margin-bottom: 25px;
 
 $feature-section-margin-top: 75px;
 $feature-section-padding-bottom: 56px;
