--- a/scss/sections/_features.scss
+++ b/scss/sections/_features.scss
@@ -6,7 +6,7 @@
     background-image: url(../../assets/images/blue_ellipse.svg);
     background-repeat: no-repeat;
     background-size: 450px;
-    background-position: right 25px top 0;
+    background-position: right 11% top 0;
     padding-bottom: $feature-section-padding-bottom;
 
     margin-top: $feature-section-margin-top;
