responsive changes on navbar

--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -2,20 +2,21 @@
 
 .menu {
 
-    background-color: $white;
-    height: $navbar-height;
-
     .navbar-brand {
         font-family: $brand-font-family;
         font-weight: $brand-font-weight;
         line-height: $brand-line-height;
         color: $brand-color;
         margin-right: 66px;
+
+
+        @include media-breakpoint-up(md) {
+            font-size: $font-size-lg;
+        }
     }
 
     .navbar-nav {
 
-        width: $navbar-menu-width;
         max-width: $navbar-menu-max-width;
         justify-content: space-between;
 
