--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3962,10 +3962,10 @@ textarea.form-control-lg {
   justify-content: space-between;
 }
 .navbar-brand {
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   margin-right: 1rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
   text-decoration: none;
   white-space: nowrap;
 }
@@ -11226,10 +11226,6 @@ textarea.form-control-lg {
   color: inherit;
 }
 
-.menu {
-  background-color: #fff;
-  height: 72px;
-}
 .menu .navbar-brand {
   font-family: "Playfair Display", serif;
   font-weight: 700;
@@ -11237,8 +11233,12 @@ textarea.form-control-lg {
   color: #18191F;
   margin-right: 66px;
 }
+@media (min-width: 768px) {
+  .menu .navbar-brand {
+    font-size: 1.25rem;
+  }
+}
 .menu .navbar-nav {
-  width: 70%;
   max-width: 450px;
   justify-content: space-between;
 }
