--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -73,6 +73,7 @@ $brand-font-family: $font-family-serif;
 $brand-font-weight: 700;
 $brand-line-height: 1.5;
 $brand-color: $gray-900;
+$navbar-brand-font-size: 1rem;
 
 $navbar-height: 72px;
 $navbar-menu-width: 70%;
