--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@
   --bs-pink: #d63384;
   --bs-red: #F02B0C;
   --bs-orange: #fd7e14;
-  --bs-yellow: #ffc107;
+  --bs-yellow: #FCCC19;
   --bs-green: #0BB84D;
   --bs-teal: #20c997;
   --bs-cyan: #0dcaf0;
@@ -53,7 +53,7 @@
   --bs-secondary: #6c757d;
   --bs-success: #0BB84D;
   --bs-info: #0dcaf0;
-  --bs-warning: #ffc107;
+  --bs-warning: #FCCC19;
   --bs-danger: #F02B0C;
   --bs-light: #F4F5F7;
   --bs-dark: #18191F;
@@ -61,7 +61,7 @@
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 11, 184, 77;
   --bs-info-rgb: 13, 202, 240;
-  --bs-warning-rgb: 255, 193, 7;
+  --bs-warning-rgb: 252, 204, 25;
   --bs-danger-rgb: 240, 43, 12;
   --bs-light-rgb: 244, 245, 247;
   --bs-dark-rgb: 24, 25, 31;
@@ -2075,15 +2075,15 @@ progress {
 }
 
 .table-warning {
-  --bs-table-bg: #fff3cd;
-  --bs-table-striped-bg: #f2e7c3;
+  --bs-table-bg: #fef5d1;
+  --bs-table-striped-bg: #f1e9c7;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #e6dbb9;
+  --bs-table-active-bg: #e5ddbc;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #ece1be;
+  --bs-table-hover-bg: #ebe3c1;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #e6dbb9;
+  border-color: #e5ddbc;
 }
 
 .table-danger {
@@ -3063,32 +3063,32 @@ textarea.form-control-lg {
 
 .btn-warning {
   color: #000;
-  background-color: #ffc107;
-  border-color: #ffc107;
+  background-color: #FCCC19;
+  border-color: #FCCC19;
 }
 .btn-warning:hover {
   color: #000;
-  background-color: #ffca2c;
-  border-color: #ffc720;
+  background-color: #fcd43c;
+  border-color: #fcd130;
 }
 .btn-check:focus + .btn-warning, .btn-warning:focus {
   color: #000;
-  background-color: #ffca2c;
-  border-color: #ffc720;
-  box-shadow: 0 0 0 0.25rem rgba(217, 164, 6, 0.5);
+  background-color: #fcd43c;
+  border-color: #fcd130;
+  box-shadow: 0 0 0 0.25rem rgba(214, 173, 21, 0.5);
 }
 .btn-check:checked + .btn-warning, .btn-check:active + .btn-warning, .btn-warning:active, .btn-warning.active, .show > .btn-warning.dropdown-toggle {
   color: #000;
-  background-color: #ffcd39;
-  border-color: #ffc720;
+  background-color: #fdd647;
+  border-color: #fcd130;
 }
 .btn-check:checked + .btn-warning:focus, .btn-check:active + .btn-warning:focus, .btn-warning:active:focus, .btn-warning.active:focus, .show > .btn-warning.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(217, 164, 6, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(214, 173, 21, 0.5);
 }
 .btn-warning:disabled, .btn-warning.disabled {
   color: #000;
-  background-color: #ffc107;
-  border-color: #ffc107;
+  background-color: #FCCC19;
+  border-color: #FCCC19;
 }
 
 .btn-danger {
@@ -3282,27 +3282,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-warning {
-  color: #ffc107;
-  border-color: #ffc107;
+  color: #FCCC19;
+  border-color: #FCCC19;
 }
 .btn-outline-warning:hover {
   color: #000;
-  background-color: #ffc107;
-  border-color: #ffc107;
+  background-color: #FCCC19;
+  border-color: #FCCC19;
 }
 .btn-check:focus + .btn-outline-warning, .btn-outline-warning:focus {
-  box-shadow: 0 0 0 0.25rem rgba(255, 193, 7, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(252, 204, 25, 0.5);
 }
 .btn-check:checked + .btn-outline-warning, .btn-check:active + .btn-outline-warning, .btn-outline-warning:active, .btn-outline-warning.active, .btn-outline-warning.dropdown-toggle.show {
   color: #000;
-  background-color: #ffc107;
-  border-color: #ffc107;
+  background-color: #FCCC19;
+  border-color: #FCCC19;
 }
 .btn-check:checked + .btn-outline-warning:focus, .btn-check:active + .btn-outline-warning:focus, .btn-outline-warning:active:focus, .btn-outline-warning.active:focus, .btn-outline-warning.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(255, 193, 7, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(252, 204, 25, 0.5);
 }
 .btn-outline-warning:disabled, .btn-outline-warning.disabled {
-  color: #ffc107;
+  color: #FCCC19;
   background-color: transparent;
 }
 
@@ -4881,12 +4881,12 @@ textarea.form-control-lg {
 }
 
 .alert-warning {
-  color: #664d03;
-  background-color: #fff3cd;
-  border-color: #ffecb5;
+  color: #65520a;
+  background-color: #fef5d1;
+  border-color: #fef0ba;
 }
 .alert-warning .alert-link {
-  color: #523e02;
+  color: #514208;
 }
 
 .alert-danger {
@@ -5240,17 +5240,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-warning {
-  color: #664d03;
-  background-color: #fff3cd;
+  color: #65520a;
+  background-color: #fef5d1;
 }
 .list-group-item-warning.list-group-item-action:hover, .list-group-item-warning.list-group-item-action:focus {
-  color: #664d03;
-  background-color: #e6dbb9;
+  color: #65520a;
+  background-color: #e5ddbc;
 }
 .list-group-item-warning.list-group-item-action.active {
   color: #fff;
-  background-color: #664d03;
-  border-color: #664d03;
+  background-color: #65520a;
+  border-color: #65520a;
 }
 
 .list-group-item-danger {
@@ -6324,10 +6324,10 @@ textarea.form-control-lg {
 }
 
 .link-warning {
-  color: #ffc107;
+  color: #FCCC19;
 }
 .link-warning:hover, .link-warning:focus {
-  color: #ffcd39;
+  color: #fdd647;
 }
 
 .link-danger {
@@ -6758,7 +6758,7 @@ textarea.form-control-lg {
 }
 
 .border-warning {
-  border-color: #ffc107 !important;
+  border-color: #FCCC19 !important;
 }
 
 .border-danger {
@@ -11226,6 +11226,32 @@ textarea.form-control-lg {
   color: inherit;
 }
 
+.testimonial {
+  background-color: #fff;
+  padding: 67px 37px 49px 37px;
+  margin-bottom: 30px;
+  border-radius: 3px;
+  box-shadow: 0px 10px 20px rgba(41, 41, 42, 0.07);
+}
+.testimonial .testimonial-text {
+  font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1.125rem;
+  font-weight: 300;
+  font-style: italic;
+  linke-height: 1.5;
+}
+.testimonial .testimonial-text::before {
+  content: " ";
+  background-image: url(../../assets/images/quote_mark.svg);
+  background-size: cover;
+  width: 16px;
+  height: 14px;
+  display: block;
+  position: absolute;
+  margin-left: -20px;
+  margin-top: -4px;
+}
+
 .menu .navbar-brand {
   font-family: "Playfair Display", serif;
   font-weight: 700;
@@ -11290,6 +11316,47 @@ textarea.form-control-lg {
   background-color: rgba(174, 220, 255, 0.2);
   padding-top: 100px;
   padding-bottom: 100px;
+}
+
+.testimonials-section {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: rgba(253, 222, 106, 0.2);
+}
+@media (min-width: 768px) {
+  .testimonials-section {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+.testimonials-section .header-testimonials {
+  padding-left: 94px;
+  padding-top: 66px;
+}
+.testimonials-section .header-testimonials::before {
+  content: " ";
+  background-image: url(../../assets/images/quote_mark.svg);
+  background-size: cover;
+  width: 143px;
+  height: 120px;
+  display: block;
+  position: absolute;
+  margin-left: -94px;
+  margin-top: -66px;
+  z-index: -1;
+}
+.testimonials-section .lead-testimonials {
+  padding-left: 94px;
+}
+@media (min-width: 992px) {
+  .testimonials-section .testimonial-2 {
+    width: 85%;
+  }
+}
+@media (min-width: 992px) {
+  .testimonials-section .testimonial-3 {
+    width: 65%;
+  }
 }
 
 .footer-section {
