--- a/scss/sections/_cta.scss
+++ b/scss/sections/_cta.scss
@@ -3,6 +3,6 @@
 
 .cta-section {
     background-color: rgba($blue-300, .2);
-    padding-top: $cta-section-padding-top;
-    padding-bottom: $cta-section-padding-bottom;
+    padding-top: $section-padding-top;
+    padding-bottom: $section-padding-bottom;
 }
