--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,9 +3,11 @@
 @use 'components/buttons';
 @use 'components/feature';
 @use 'components/signup';
+@use 'components/testimonial';
 
 @use 'sections/navbar';
 @use 'sections/hero';
 @use 'sections/features';
 @use 'sections/cta';
+@use 'sections/testimonials';
 @use 'sections/footer';
