--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11314,8 +11314,14 @@ textarea.form-control-lg {
 
 .cta-section {
   background-color: rgba(174, 220, 255, 0.2);
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+@media (min-width: 768px) {
+  .cta-section {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 }
 
 .testimonials-section {
