--- a/scss/sections/_cta.scss
+++ b/scss/sections/_cta.scss
@@ -3,6 +3,11 @@
 
 .cta-section {
     background-color: rgba($blue-300, .2);
-    padding-top: $section-padding-top;
-    padding-bottom: $section-padding-bottom;
+    padding-top: $section-padding-top * 0.2;
+    padding-bottom: $section-padding-bottom * 0.2;
+
+    @include media-breakpoint-up(md) {
+        padding-top: $section-padding-top;
+        padding-bottom: $section-padding-bottom;
+    }
 }
