--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -21,4 +21,9 @@
         margin-top: $hero-cta-margin-top;
         margin-bottom: $hero-cta-margin-bottom;
     }
+
+    .app-img {
+        
+        width: 350px;
+    }
 }
