changed button color to red

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11135,7 +11135,7 @@ textarea.form-control-lg {
   }
 }
 .btn-arrow {
-  background-color: #0076D1;
+  background-color: #F02B0C;
   box-shadow: 0px 4px 4px rgba(103, 103, 103, 0.25);
   font-size: 1.25rem;
   font-weight: 500;
@@ -11153,7 +11153,7 @@ textarea.form-control-lg {
 }
 
 .btn-submit {
-  background-color: #0076D1;
+  background-color: #F02B0C;
   padding: 11px 19px;
   font-size: 1.25rem;
   font-weight: 500;
